@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Sat Feb 03 12:21:50 CST 2018
+#Sat Feb 03 22:09:12 CST 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
