@@ -3465,8 +3465,6 @@ block chisel:wool_orange * fff7983f
 block chisel:wool_orange 0 ffd7a458
 block chisel:wool_white * ffd7cabd
 block chisel:wool_white 0 ffa0a0a0
-block duckcraft:rawduckblock * fffcbabe
-block duckcraft:cookedduckblock * ff83120d
 block tconstruct:soil * ff9fa1ab
 block tconstruct:soil 1 ff2c5805
 block tconstruct:soil 2 ff054f58
@@ -4101,7 +4099,7 @@ block botania:endereyeblock * ff578066
 block botania:endereyeblock 15 ff607b64
 block botania:starfield * 3fc1186e
 block botania:rfgenerator * ffc29c8d
-block botania:elfglass * 36b0fcff
+block botania:elfglass * 39b0fcff
 block botania:brewery * ffccc9b6
 block botania:managlass * 33b0bdff
 block botania:terraplate * 2f1d3667
@@ -4293,14 +4291,7 @@ block earthworks:block_chalk * ffdad7cb
 block earthworks:block_cinder * ff979695
 block earthworks:block_cob * ffc5c3a6
 block earthworks:block_concrete * ffb5b3ad
-block earthworks:block_cordwood * ff8b7b60
-block earthworks:block_cordwood 3 ff87785d
-block earthworks:block_cordwood 4 ff887c67
-block earthworks:block_cordwood 5 ff887c67
-block earthworks:block_cordwood 9 ff87785d
-block earthworks:block_cordwood 10 ff887c67
-block earthworks:block_cordwood 11 ff887c67
-block earthworks:block_cordwood 15 ff87785d
+block earthworks:block_cordwood * ff87785d
 block earthworks:block_dry_stone * ff6a6a6a
 block earthworks:block_gabion_gravel * ff7e7c7a
 block earthworks:block_gabion_sand * ff7e7c7a
@@ -5812,6 +5803,9 @@ block twilightforest:block_storage 3 ffa6b3bb
 block twilightforest:block_storage 4 ffa40f0f
 block twilightforest:lapis_block * ff313a63
 block twilightforest:spiral_bricks * ff767676
+block voidcraft:blockvoidfluid * ff21143d
+block voidcraft:blockacidfluid * c044ac44
+block voidcraft:blockarcanesludgefluid * ff00d3da
 block voidcraft:blockvoidcrystal * f0543679
 block voidcraft:orevoidcrystal * ff535353
 block voidcraft:orevoidcrystal 0 ffdddfa5
@@ -5870,9 +5864,6 @@ block voidcraft:dreambed 14 c0689696
 block voidcraft:dreambed 15 c0689696
 block voidcraft:creationforge * ff111111
 block voidcraft:creationforge_ray * ff7afdff
-block voidcraft:blockvoidfluid * ff21143d
-block voidcraft:blockacidfluid * c044ac44
-block voidcraft:blockarcanesludgefluid * ff00d3da
 block waterstrainer:strainer_base * ff533516
 block abyssalcraft:stone * ff20212f
 block abyssalcraft:stone 1 ff0a1f0b
@@ -6671,6 +6662,12 @@ block roots:runestone * ff3f434b
 block roots:runestone_brick * ff41454d
 block roots:chiseled_runestone * ff373a42
 block roots:offertory_plate * cc3f424b
+block signpost:blockbase * ff969696
+block signpost:blockbasemodel0 * ffffffff
+block signpost:blockbasemodel1 * ffffffff
+block signpost:blockbasemodel2 * ffffffff
+block signpost:blockbasemodel3 * ffffffff
+block signpost:blockbasemodel4 * ffffffff
 block elulib:test * ff0c9e9e
 block gravelores:coal_gravel_ore * ff6f6d6c
 block gravelores:iron_gravel_ore * ff847c77
