@@ -8,7 +8,7 @@
 
 blocks {
     # Enable Storage Blocks [default: true]
-    B:enableStorageBlocks=true
+    B:enableStorageBlocks=false
 }
 
 
