@@ -1,46 +1,0 @@
-# Configuration file
-
-~CONFIG_VERSION: 0.1.0
-
-world-78688046 {
-    # Give items instead of showing the recipe.
-    B:cheatItemsEnabled=false
-
-    # Hide and unhide items by clicking them in the item list.
-    B:editEnabled=false
-    S:filterText=ghostwoo
-
-    # Show the list of items next to open guis.
-    B:overlayEnabled=true
-}
-
-
-world1544803905 {
-    S:filterText=
-}
-
-
-world1855637915 {
-    B:cheatItemsEnabled=false
-    B:editEnabled=false
-    S:filterText=
-    B:overlayEnabled=true
-}
-
-
-world1895403326 {
-    B:cheatItemsEnabled=false
-    B:editEnabled=false
-    S:filterText=presser
-    B:overlayEnabled=true
-}
-
-
-world904847518 {
-    B:cheatItemsEnabled=false
-    B:editEnabled=false
-    S:filterText=@rustic
-    B:overlayEnabled=true
-}
-
-
