@@ -1,0 +1,68 @@
+# Configuration file
+
+##########################################################################################################
+# client settings
+#--------------------------------------------------------------------------------------------------------#
+# Client-Side settings
+##########################################################################################################
+
+"client settings" {
+    # Directly teleports the player on waystone right-click [default: true]
+    B:skipTeleportConfirm=true
+}
+
+
+##########################################################################################################
+# limitaion
+#--------------------------------------------------------------------------------------------------------#
+# Teleport limitaion settings
+##########################################################################################################
+
+limitaion {
+    # Deactivates teleportation and the waystone recipe, since it isn't needed [default: false]
+    B:deactivateTeleportation=false
+
+    # The distance a Player can teleport with one item (the total cost of a teleportation is calculated using the total distance)(0 = unlimited) [range: 0 ~ 2147483647, default: 0]
+    I:distancePerPayment=0
+
+    # Enables interdimensional teleportation (e.g. overworld-nether) [default: true]
+    B:interdimensional=false
+
+    # The allowed distance between signpost an waystone (-1 = unlimited) [range: -1 ~ 46340, default: -1]
+    I:maxDistance=-1
+
+    # The amount of signposts a player is allowed to place (-1 = unlimited) [range: -1 ~ 2147483647, default: -1]
+    I:maxSignposts=-1
+
+    # The amount of waystones a player is allowed to place (-1 = unlimited) [range: -1 ~ 2147483647, default: -1]
+    I:maxWaystones=-1
+
+    # The item players have to pay in order to use a signpost (e.g. minecraft:enderPearl, '' = free) [default: ]
+    S:paymentItem=abyssalcraft:coin
+
+    # Changes the recipe for signposts (NORMAL/EXPENSIVE/VERY_EXPENSIVE/DEACTIVATED) [default: NORMAL]
+    S:signpostRecipeCost=EXPENSIVE
+
+    # Changes the recipe for waystones (NORMAL/EXPENSIVE/VERY_EXPENSIVE/DEACTIVATED) [default: NORMAL]
+    S:waystoneRecipeCost=EXPENSIVE
+}
+
+
+##########################################################################################################
+# security
+#--------------------------------------------------------------------------------------------------------#
+# Security settings
+##########################################################################################################
+
+security {
+    # Allows players to travel to waystones without the need to discover them [default: false]
+    B:disableDiscovery=true
+
+    # Defines which players can place and edit a signpost (ALL, OWNERS, CREATIVEONLY, OPONLY). OPs are always included, 'OWNERS' = everyone can place, only the owner+OPs can edit. [default: ALL]
+    S:signpostPermissionLevel=OWNERS
+
+    # Defines which players can place and edit a waystone (ALL, OWNERS, CREATIVEONLY, OPONLY). OPs are always included, 'OWNERS' = everyone can place, only the owner+OPs can edit. [default: ALL]
+    S:waystonePermissionLevel=OWNERS
+}
+
+
