@@ -1,5 +1,5 @@
 #Splash screen properties
-#Sat Feb 03 12:20:52 CST 2018
+#Sat Feb 03 22:08:09 CST 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
@@ -9,8 +9,8 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-bar=0xCB3D35
 enabled=true
+bar=0xCB3D35
 resourcePackPath=resources
 logoOffset=0
 forgeTexture=fml\:textures/gui/forge.png
