@@ -2,4 +2,4 @@
 recipes.addShapeless("bop_mud_to_balls", <biomesoplenty:mudball>*4, [<biomesoplenty:mud>]);
 
 // add clay recipe
-recipes.addShapeless("clay_from_stuff_slime_mc", <minecraft:clay_ball>*2, [<biomesoplenty:mudball>, <ore:slimeball>, <minecraft:stone>]);
+recipes.addShapeless("clay_from_stuff_slime_mc", <minecraft:clay_ball>*4, [<biomesoplenty:mudball>*2, <ore:slimeball>, <minecraft:stone>]);
